--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -39,7 +38,7 @@
   "scripts": {
     "server": "nodemon api/index.js",
     "start": "react-scripts start",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm start\"",
+    "random": "concurrently --kill-others-on-fail \"npm run server\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
